# tap2junit

./: .gitignore  .travis.yml  CHANGELOG.md  Pipfile  README.md  README.rst  bandit.yaml  pyproject.toml  release-please-config.json  setup.py
.github/workflows/: lint_python.yml  publish_to_PyPI.yml  release-please.yml  test.yml  test_python.yml
tap2junit/: __main__.py  tap13.py
test/: _common.py  _prepare_outputs.py  test_outputs.py
test/fixtures/: test-bailout.tap  test-eslint1.tap  test-eslint2.tap  test-nested.tap  test-plan-at-end.tap  test-tap12.tap  test.tap  test2.tap  test2.xml  test3.tap  test4.tap  yaml-block.tap
test/output/: test-bailout.xml  test-eslint1.xml  test-eslint2.xml  test-eslint3.xml  test-nested.xml  test-plan-at-end.xml  test-tap12.xml  test.xml  test2.xml  test3.xml  test4.xml  yaml-block.xml
