[project]
name = "tap2junit"
version = "0.1.5"
description = "Tap13 to jUnit"
readme = "README.md"
authors = [
  {name = "Node.js contributor", email = "cclauss@me.com"}
]
keywords = ["tap13", "junit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License, Version 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "junit_xml",
  "yamlish"
]

[project.scripts]
tap2junit = "tap2junit.__main__:main"

[project.urls]
repository = "https://github.com/nodejs/tap2junit"

[tool.mypy]
exclude = ["build/"]
ignore_missing_imports = true

[tool.ruff]
select = ["A", "B", "C4", "C9", "E", "F", "I", "PL", "S", "UP", "W", "YTT"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.per-file-ignores]
"test/*" = ["S101"]  # Use of assert detected which is OK in pytests.

[tool.ruff.pylint]
max-args = 6
max-branches = 25
max-statements = 89
