[project]
name = "tap2junit"
description = "A utility that converts TAP version 12 and 13 to JUnit. That's it."
dynamic = ["version"]
keywords = ["tap13", "junit"]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Node.js contributor", email = "cclauss@me.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "junit_xml",
    "yamlish"
]

[project.optional-dependencies]
dev = [
    "black",
    "codespell[toml]",
    "mypy",
    "pytest",
    "pytest-clarity",
    "ruff",
    "safety",
]

[project.scripts]
tap2junit = "tap2junit.__main__:main"

[project.urls]
Homepage = "https://github.com/nodejs/tap2junit"
Changelog = "https://github.com/nodejs/tap2junit/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/backend",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "tap2junit/__init__.py"

[tool.codespell]
quiet-level = 3
skip = '*.tap,*.xml'

[tool.mypy]
exclude = ["build/"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88    # Recommended: 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C9",
    "DTZ",
    "E",
    "EXE",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RUF",
    "S",
    "SIM",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.mccabe]
max-complexity = 24 # Recommended: 10

[tool.ruff.lint.pylint]
max-args = 6        # Recommended: 5
max-branches = 25   # Recommended: 12
max-returns = 6     # Recommended: 6
max-statements = 89 # Recommended: 50

[tool.ruff.lint.per-file-ignores]
"test/*" = ["C406", "S101", "SIM115"]
"test/_prepare_outputs.py" = ["PLW1510", "S603", "S607"]
"test/test_outputs.py" = ["PLW1510", "S603", "S607"]
